--- a/css/large.css
+++ b/css/large.css
@@ -2,7 +2,7 @@
 
     .containpeople {
         max-width: 1024px;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
     }
        
 }
