--- a/css/medium.css
+++ b/css/medium.css
@@ -26,10 +26,10 @@ nav {
 }
 
 
-.containpeople {
+/*.containpeople {
     max-width: 650px;
     grid-template-columns: 1fr;
-}
+}*/
     
 }
     
