--- a/css/large.css
+++ b/css/large.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 64em) {
 
-    .containpeople {
+    /*.containpeople {
         max-width: 1024px;
         grid-template-columns: 1fr;
-    }
+    }*/
        
 }
